:art: estilo botao cancelar modal criar alimentos e dietas

--- a/alimento/templates/alimento/alimentos.html
+++ b/alimento/templates/alimento/alimentos.html
@@ -38,7 +38,7 @@
       <div class="cabecalho-conteudo-principal">
         <h1>Alimentos</h1>
 
-        <button class="botao-padrao" id="abrirModal" type="button" hx-get={% url 'cadastrar-alimento' %} hx-trigger='click' hx-target='#modal' hx-swap="innerHTML">
+        <button class="abrirModal botao-padrao" type="button" hx-get={% url 'cadastrar-alimento' %} hx-trigger='click' hx-target='#modal' hx-swap="innerHTML">
           Novo alimento
         </button>
       </div>
@@ -68,7 +68,7 @@
       
 
       <dialog class="cadastro-alimento" id="myModal">
-        <button id="fecharModal"><i class="ph ph-x"></i></button>
+        <button class="fecharModal"><i class="ph ph-x"></i></button>
 
         <div id="modal">
         </div>
