--- a/dieta/templates/dieta/listar-dietas.html
+++ b/dieta/templates/dieta/listar-dietas.html
@@ -50,7 +50,7 @@
       {% endfor %}      
 
       <dialog class="cadastro-de-paciente" id="myModal">
-        <button id="fecharModal"><i class="ph ph-x"></i></button>
+        <button class="fecharModal"><i class="ph ph-x"></i></button>
         <div id="modal">
         </div>
       </dialog>
