--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -20,13 +20,7 @@
         </div>
       </nav>
 
-      <div class="informacoes-do-usuario">
-        <div class="texto-informacoes-do-usuario">
-          <span class="nome-do-usuario">Claudinei Camilo</span>
-          <span class="tipo-de-usuario">Nutricionista</span>
-        </div>
-        <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" />
-      </div>
+      {% include "core/info-usuario.html" with info_usuario=nutricionista.nome tipo_usuario='nutricionista' %}
     </header>
     <section class="conteudo-principal">
       <div class="cabecalho-conteudo-principal">
