--- a/paciente/templates/paciente/collapse.html
+++ b/paciente/templates/paciente/collapse.html
@@ -27,7 +27,7 @@
 
           <div class="detalhes-collapse">
             <span class="titulo-collapse">Whatsapp</span>
-            <a href="{{paciente.contato}}" class="dados-do-cliente" id="botao-entrar-em-contato"><img src="{% static 'imagens/icone-whatsapp.svg' %}" alt="icone-whatsapp" /> Entrar em contato</a>
+            <a href="https://api.whatsapp.com/send?phone={{paciente.whatsapp}}&text=Ol%C3%A1%2C%20aqui%20est%C3%A1%20o%20seu%20formul%C3%A1rio"><img src="{% static 'imagens/icone-whatsapp.svg' %}" alt="icone-whatsapp" /> Entrar em contato</a>
           </div>
         </div>
 
