--- a/alimento/templates/alimento/alimentos.html
+++ b/alimento/templates/alimento/alimentos.html
@@ -26,13 +26,7 @@
         </div>
       </nav>
 
-      <div class="informacoes-do-usuario">
-        <div class="texto-informacoes-do-usuario">
-          <span class="nome-do-usuario">Claudinei Camilo</span>
-          <span class="tipo-de-usuario">Nutricionista</span>
-        </div>
-        <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" />
-      </div>
+      {% include "core/info-usuario.html" with info_usuario=nutricionista.nome tipo_usuario='nutricionista' %}
     </header>
     <section class="conteudo-principal">
       <div class="cabecalho-conteudo-principal">
@@ -65,7 +59,30 @@
         {% endfor %}
       {% endif %}
 
-      
+
+      {% comment %} <nav>
+        <ul class="pagination">
+          <li class="page-item {% if alimentos.has_previous %}">
+            <a class="page-link" href="?page=1" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+    
+          {% for num in alimentos.paginator.page_range %}
+            <li class="page-item {% if num == alimentos.number %}active{% endif %}">
+                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+            </li>
+          {% endfor %}
+    
+          <li class="page-item {% if alimentos.has_next %}">
+            <a class="page-link" href="?page={{ alimentos.next_page_number }}" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav> {% endcomment %}
+
+      {% include "core/paginacao.html" %}
 
       <dialog class="cadastro-alimento" id="myModal">
         <button class="fecharModal"><i class="ph ph-x"></i></button>
@@ -73,7 +90,9 @@
         <div id="modal">
         </div>
       </dialog>
-    
+
+
+      
     </section>
   </main>
 </body>
