--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -34,7 +34,9 @@
 
       {% for paciente in pacientes %}
         {% include "paciente/collapse.html" %}
-      {% endfor %}      
+      {% endfor %}   
+      
+      {% include "core/paginacao.html" %}
   
       <dialog class="cadastro-de-paciente" id="myModal">
         <button class="fecharModal"><i class="ph ph-x"></i></button>
