--- a/formulario/templates/formulario/listar-formularios.html
+++ b/formulario/templates/formulario/listar-formularios.html
@@ -44,6 +44,8 @@
         {% include "formulario/collapse.html" %}
       {% endfor %}
 
+      {% include "core/paginacao.html" %}
+
       <dialog class="cadastro-de-paciente" id="myModal">
         <button class="fecharModal"><i class="ph ph-x"></i></button>
         <div id="modal">
