:art: ajustar modal de paciente

--- a/alimento/templates/alimento/collapse-alimentos.html
+++ b/alimento/templates/alimento/collapse-alimentos.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="footer-collapse-pacientes">
-          <button hx-get={% url 'editar-alimento' id=alimento.id %} hx-trigger='click' hx-target='#modal2' hx-swap="innerHTML" class="abrirModal botao-editar">
+          <button hx-get={% url 'editar-alimento' id=alimento.id %} hx-trigger='click' hx-target='#modal2' hx-swap="innerHTML" class="abrirModal2 botao-editar">
             <i class="ph ph-pencil-simple-line"></i>
             <a>Editar</a>
           <button class="botao-excluir">
