--- a/paciente/templates/paciente/collapse.html
+++ b/paciente/templates/paciente/collapse.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="footer-collapse-pacientes">
-          <button hx-get={% url 'editar-paciente' id=paciente.id %} hx-trigger='click' hx-target='#modal3' hx-swap="innerHTML" class="abrirModal botao-editar">
+          <button hx-get={% url 'editar-paciente' id=paciente.id %} hx-trigger='click' hx-target='#modal3' hx-swap="innerHTML" class="abrirModal3 botao-editar">
             <i class="ph ph-pencil-simple-line"></i>
             <a>Editar</a>
           </button>
@@ -66,7 +66,7 @@
         </div>
       </div>
       <dialog class="cadastro-de-paciente" id="myModal3">
-        <button id="fecharModal3"><i class="ph ph-x"></i></button>
+        <button class="fecharModal"><i class="ph ph-x"></i></button>
         <div id="modal3">
         </div>
       </dialog>
