:art: tamanho collapse

--- a/alimento/templates/alimento/collapse-alimentos.html
+++ b/alimento/templates/alimento/collapse-alimentos.html
@@ -7,7 +7,7 @@
         </div>
         <i class="ph ph-caret-down"></i>
       </label>
-      <input type="radio" name="collapse" id="{{alimento.id}}" {% if forloop.first %}checked{% endif %} />
+      <input type="radio" name="collapse" id="{{alimento.id}}" />
 
       <div class="content">
         <div class="informacoes-gerais-do-paciente">
