--- a/dieta/templates/dieta/collapse.html
+++ b/dieta/templates/dieta/collapse.html
@@ -7,7 +7,7 @@
         </div>
         <i class="ph ph-caret-down"></i>
       </label>
-      <input type="radio" name="collapse" id="{{dieta.id}}" {% if forloop.first %}checked{% endif %} />
+      <input type="radio" name="collapse" id="{{dieta.id}}" />
       <div class="content">
         {% for refeicao in dieta.refeicoes.all %}
           <div class="informacoes-gerais-do-paciente">
