:art: add paginacao

--- a/alimento/templates/alimento/alimentos.html
+++ b/alimento/templates/alimento/alimentos.html
@@ -47,6 +47,8 @@
         {% include "alimento/collapse-alimentos.html" %}
       {% endfor %}
 
+      {% include "core/paginacao.html" %}
+
       <dialog class="cadastro-alimento" id="myModal">
         <button class="fecharModal"><i class="ph ph-x"></i></button>
 
